# scrapd

./: .coveragerc  .gitignore  .mergify.yml  .pylintrc  .style.yapf  CHANGELOG.html  CHANGELOG.md  CNAME  CONTRIBUTING.html  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.html  README.rst  code-of-conduct.md  contributing.html  contributors.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  requirements-dev.txt  requirements-profilers.txt  requirements.txt  search.html  searchindex.js  setup.cfg  tasks.py  tox.ini  usage.html
.circleci/: config.yml  publish.sh
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md  stale.yml
_modules/: index.html
_modules/scrapd/core/: apd.html  constant.html  version.html
_sources/: CHANGELOG.md.txt  CONTRIBUTING.rst.txt  README.rst.txt  contributing.rst.txt  index.rst.txt  usage.rst.txt
_sources/api/: scrapd.core.rst.txt
_static/: aiohttp.css  custom.css  documentation_options.js
api/: modules.html  scrapd.core.html
contrib/: scrapd-complete.sh
docs/source/: CONTRIBUTING.rst  conf.py  contributing.rst  index.rst  installation.rst  testing.rst  usage.rst
docs/source/api/: modules.rst  scrapd.core.rst
scrapd/: main.py
scrapd/cli/: base.py  cli.py
scrapd/core/: apd.py  apd_scraper.py  article.py  constant.py  date_utils.py  deceased.py  formatter.py  gsheets.py  model.py  parsing.py  person.py  regex.py  twitter.py
scrapd/tests/: test_scrapd.py
tests/: mock_data.py  mock_deceased.py  mock_twitter.py  test_common.py
tests/core/: test_apd.py  test_article.py  test_date_utils.py  test_deceased.py  test_formatters.py  test_gsheets.py  test_model.py  test_parsing.py  test_person.py  test_regex.py  test_twitter.py
tests/core/.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  (+92 more)
tests/data/: 296  296-page=1  296-page=2  296-page=27  296-page=3  296-page=5  296?page=10  296?page=15  296?page=20  detail_page.html  fatality-crash-15-2  fatality-crash-17-2  fatality-crash-18-2  fatality-crash-19-3  fatality-crash-20-2  fatality-crash-41-2  fatality-crash-5-2  news_page.html  traffic-fatality-15-4  traffic-fatality-16-4  traffic-fatality-17-4  traffic-fatality-2-3  traffic-fatality-20-4  traffic-fatality-25-4  traffic-fatality-4-6  traffic-fatality-50-3  traffic-fatality-71-2  traffic-fatality-72-1  traffic-fatality-73-2
tests/features/: retrieve.feature
tests/step_defs/: test_retrieve.py
(+220 files in other folders)
