[metadata]
name = scrapd
summary = Extract data from APD news site
description-file =
    README.rst
author = rgreinho
author-email = remy.greinhofer@gmail.com
home-page = http://www.scrapd.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
data_files =
  etc/bash_completion.d/ = contrib/scrapd-complete.sh

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    scrapd = scrapd.cli.cli:cli

[pbr]
builder = html,text
skip_authors = True
skip_changelog = True
all_files = 1

[wheel]
universal = 0

[flake8]
exclude =
  *.egg-info,
  *.pyc,
  .cache,
  .eggs
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  docs/source/conf.py,
  tests/fixtures/*
import-order-style = google
max-complexity = 10
max-line-length = 120

[pydocstyle]
match = (?!test_|__).*\.py
ignore = D106,D202,D203,D212,D213

[tool:pytest]
addopts = --disable-pytest-warnings -n auto
